# words_perso

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
data/lists/: 001-010.html  011-020.html  021-030.html  031-040.html  041-050.html  051-060.html  061-070.html  071-080.html  081-090.html  091-100.html  101-110.html  111-120.html  121-130.html  131-140.html  141-150.html  151-157.html
data/txt/: all.txt  alpha_lower.txt  alpha_lower_min3.txt  alpha_lower_min3_valid.txt  alpha_lower_valid.txt  min3.txt  min3_valid.txt  valid.txt
src/: def_downloader.rs  extract_english.rs  list_generator.rs  main.rs  read_write.rs  word_generator.rs
